Bug 163638 - CSV import dialog's "From rows:" property is remembered across uses, but the visual indicator is not
Summary: CSV import dialog's "From rows:" property is remembered across uses, but the ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: CSV-Dialog Dialog-Remember-Settings
  Show dependency treegraph
 
Reported: 2024-10-26 19:53 UTC by Jeff Fortin Tam
Modified: 2025-03-28 17:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff Fortin Tam 2024-10-26 19:53:26 UTC
1. Open Calc
2. Ctrl+V the contents of a CSV file (or ask Calc to open a .csv file)
3. Change the "From row:" field in that dialog from 1 to 2 (or more). Notice the very thin blue separator line below that row (not obvious enough, but I'll file a related bug about that).
4. OK or Cancel that dialog
5. Repeat step 2


Actual Result:

The "From row:" field is already set to the previous value, but the divider indicator line is not set / does not match.


Expected result:

Either it should not reuse the previous value of the field, and always default to "1" to avoid mistakes (which is what I would probably recommend), or at least the visual indicator should match the state of that field upon dialog creation.

---

Tested with:

Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: gtk3
Locale: en-CA (en_CA.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 Nicole A. 2024-11-22 02:51:48 UTC
Hello Jeff Fortin Tam,

Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public; remove any sensitive information before attaching it. 
See <https://wiki.documentfoundation.org/QA/FAQ#sanitize> for help on how to do so.)
Comment 2 Andreas Heinisch 2025-03-28 07:39:53 UTC
Repro in:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d5eb1b7e074ce68b1577588a7ed87308d40bf776
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2025-03-28 17:01:25 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8044f9a2b5a99c865f1ead89c60986a66151c488

tdf#163638 - CSV Import Dialog: show visual indicator for from rows

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.