tdf#163638 - CSV Import Dialog: show visual indicator for from rows

Reflect remembered from rows control in the visual indicator after
opening a new CSV file in the current session.

Change-Id: If51a10cbe1282ef45786f672d2a237b37dced89e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183440
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins